# neuralcora

./: LICENSE  README.md  pyproject.toml  quickstart-baseline.ipynb  quickstart.ipynb
data/: real_land_mask_180_360.nc
docs/: configuration.md  requirements.md
examples/00-Dataset-Prerequisites/: prerequisites.ipynb
examples/01-Introduction/: Introduction.ipynb  config.yml
neuralcora/: __init__.py  run.py
neuralcora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
neuralcora/dataset/: __init__.py  cora_dataset.py
neuralcora/datautils/: __init__.py  datamodule.py
neuralcora/evaluation/: __init__.py  metrics.py
neuralcora/modelzoo/: __init__.py  simple_cnn.py
neuralcora/training/: __init__.py  trainer.py
neuralcora/utils/: __init__.py  config.py  device.py  normalization.py
