[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralcora"
version = "0.0.1"
description = "NeuralCora: CNN-based coastal zeta forecasting framework"
readme = "README.md"
authors = [
    { name = "NeuralCora Team" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "torch>=2.0",
    "xarray>=2023.9",
    "netcdf4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
]

docs = [
    "jupyter",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neuralcora*"]
